--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "editorconfig.editorconfig",
-    "christian-kohler.path-intellisense"
+    "christian-kohler.path-intellisense",
+    "github.vscode-github-actions"
   ]
 }
