Fix IssueAnalyzer + CI test stability

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "exec": "npx ts-node src/index.ts",
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "jest --passWithNoTests",
+    "test": "jest --runInBand --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --runInBand --coverage",
     "lint": "eslint . --ext .ts",
     "typecheck": "tsc --noEmit",
     "lint:fix": "eslint . --ext .ts --fix",
