--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@e2b/code-interpreter": "^2.3.3",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.4",
+    "diff": "^8.0.3",
     "dotenv": "^16.6.1",
     "type-fest": "^5.4.3",
     "yaml": "^2.8.2",
