--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,8 @@ jobs:
       - name: Run Type Check
         run: npm run typecheck
 
+      - name: Build Project
+        run: npm run build
+
       - name: Run Tests
         run: npm test
